--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ A quick and easy reply to the airline services through your WhatsApp.
       <ul class="cards">
         <li>
           <a href="" class="card">
-            <img src="avo.jpg" class="card__image" alt="" />
+            <img src="./assets/images/avo.jpg" class="card__image" alt="" />
             <div class="card__overlay">
               <div class="card__header">
                 <!-- <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                      -->
@@ -90,7 +90,7 @@ A quick and easy reply to the airline services through your WhatsApp.
         </li>
          <li>
           <a href="" class="card">
-            <img src="avo.jpg" class="card__image" alt="" />
+            <img src="assets/images/avo.jpg" class="card__image" alt="" />
             <div class="card__overlay">
               <div class="card__header">
                 <!-- <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                      -->
